<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"
        android:drawableLeft="@drawable/icon_arrow_back"
        android:drawablePadding="20dp"
        android:layout_marginBottom="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
        <Switch
            android:layout_height="48dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
             />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:drawableRight="@drawable/icon_share"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/write_support"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:drawableRight="@drawable/icon_support"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        app:icon="@drawable/icon_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size"
        android:drawableRight="@drawable/icon_arrow_forward"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

</LinearLayout>


